[LoginDbDeprecationAndroid] Clean up in Java (part 2)
Cleans up usages in junit tests and the corresponding production code.

Bug: 433682805
Change-Id: I7a3f4fcd8e92e3b5136c88966ee94d2af017c3a2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6695595
Commit-Queue: Victor Vianna <victorvianna@google.com>
Reviewed-by: Ioana Pandele <ioanap@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1490855}