@@ -27,10 +27,10 @@ import org.robolectric.ParameterizedRobolectricTestRunner.Parameter;
 import org.robolectric.ParameterizedRobolectricTestRunner.Parameters;
 
 import org.chromium.base.Callback;
-import org.chromium.base.FeatureOverrides;
 import org.chromium.base.Promise;
 import org.chromium.base.TimeUtils;
 import org.chromium.base.test.BaseRobolectricTestRule;
+import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.base.test.util.Batch;
 import org.chromium.base.test.util.Features;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
@@ -44,7 +44,6 @@ import org.chromium.components.signin.AccountManagerFacadeProvider;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 /** Unit tests for SafetyHubPasswordsFetchService. */
 @RunWith(Enclosed.class)
@@ -59,15 +58,9 @@ public class SafetyHubPasswordsFetchServiceTest {
         private static final String TEST_EMAIL_ADDRESS = "test@email.com";
 
         /** Returns all possible combinations for test parameterization. */
-        @Parameters(name = "{0}, {1}")
-        public static Collection<Object[]> data() {
-            Collection<Object[]> data = new ArrayList<>();
-            for (boolean hasAccount : List.of(true, false)) {
-                for (boolean isLoginDbDeprecationEnabled : List.of(true, false)) {
-                    data.add(new Object[] {hasAccount, isLoginDbDeprecationEnabled});
-                }
-            }
-            return data;
+        @Parameters
+        public static Collection<Object> data() {
+            return Arrays.asList(new Object[] {true, false});
         }
 
         @Rule(order = -2)
@@ -80,9 +73,6 @@ public class SafetyHubPasswordsFetchServiceTest {
         @Parameter(0)
         public boolean hasAccount;
 
-        @Parameter(1)
-        public boolean mIsLoginDbDeprecationEnabled;
-
         private PrefService mPrefService;
         private FakePasswordCheckupClientHelper mPasswordCheckupClientHelper;
         private PasswordManagerHelper mPasswordManagerHelper;
@@ -91,12 +81,6 @@ public class SafetyHubPasswordsFetchServiceTest {
         public void setUp() {
             // Needed because of BaseRobolectricTestRule.
             MockitoAnnotations.openMocks(this);
-
-            if (mIsLoginDbDeprecationEnabled) {
-                FeatureOverrides.enable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            } else {
-                FeatureOverrides.disable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            }
 
             mPrefService = mSafetyHubTestRule.getPrefService();
             mPasswordCheckupClientHelper = mSafetyHubTestRule.getPasswordCheckupClientHelper();
@@ -134,7 +118,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenUPMDisabled() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(false, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(false, true);
 
             new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
                     .fetchPasswordsCount(mTaskFinishedCallback);
@@ -147,7 +131,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenFetchFails() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
             mPasswordCheckupClientHelper.setError(new Exception());
 
             new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
@@ -161,7 +145,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void somePreferencesUpdated_fetchFailsForOneCredentialType() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
             mPasswordCheckupClientHelper.setWeakCredentialsError(new Exception());
             int breachedCredentialsCount = 5;
             int reusedCredentialsCount = 3;
@@ -181,7 +165,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void preferencesUpdated_whenFetchSucceeds() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
             int breachedCredentialsCount = 5;
             int weakCredentialsCount = 4;
             int reusedCredentialsCount = 3;
@@ -202,7 +186,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenCheckupFails_lastCheckRecently() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
 
             long twoHoursInMs = 120 * TimeUtils.MILLISECONDS_PER_MINUTE;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoHoursInMs);
@@ -225,7 +209,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenCheckupFails_lastCheckLongAgo() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
 
             long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
@@ -248,7 +232,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void preferencesUpdated_whenCheckupSucceeds() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
             int breachedCredentialsCount = 5;
             int weakCredentialsCount = 4;
             int reusedCredentialsCount = 3;
@@ -275,7 +259,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenWithinCoolDownPeriod() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
 
             mockLastCheckTime(TimeUtils.currentTimeMillis());
 
@@ -292,23 +276,13 @@ public class SafetyHubPasswordsFetchServiceTest {
         }
     }
 
-    @RunWith(ParameterizedRobolectricTestRunner.class)
+    @RunWith(BaseRobolectricTestRunner.class)
     @Batch(Batch.UNIT_TESTS)
     @Features.EnableFeatures({
         ChromeFeatureList.SAFETY_HUB,
         ChromeFeatureList.SAFETY_HUB_WEAK_AND_REUSED_PASSWORDS
     })
     public static class SafetyHubPasswordsFetchServiceSingleTests {
-        @Parameters
-        public static Collection<Object> data() {
-            return Arrays.asList(new Object[] {true, false});
-        }
-
-        @Parameter public boolean mIsLoginDbDeprecationEnabled;
-
-        @Rule(order = -2)
-        public BaseRobolectricTestRule mBaseRule = new BaseRobolectricTestRule();
-
         @Rule public SafetyHubTestRule mSafetyHubTestRule = new SafetyHubTestRule();
 
         @Mock private Callback<Boolean> mTaskFinishedCallback;
@@ -321,12 +295,6 @@ public class SafetyHubPasswordsFetchServiceTest {
         @Before
         public void setUp() {
             MockitoAnnotations.openMocks(this);
-
-            if (mIsLoginDbDeprecationEnabled) {
-                FeatureOverrides.enable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            } else {
-                FeatureOverrides.disable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            }
 
             mPrefService = mSafetyHubTestRule.getPrefService();
             mPasswordCheckupClientHelper = mSafetyHubTestRule.getPasswordCheckupClientHelper();
@@ -347,7 +315,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenNoAccountsOnDevice_lastCheckRecently() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
             long twoHoursInMs = 120 * TimeUtils.MILLISECONDS_PER_MINUTE;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoHoursInMs);
 
@@ -373,7 +341,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenNoAccountsOnDevice_lastCheckLongAgo() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true, true);
 
             long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
